--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -390,7 +390,8 @@ image::addevent_wysd.png[width="450"]
 
 *What you should see*
 
-If successfully added, the result box (red box) will display the added event name as shown below.
+If successfully added, the result box (red box) will display message "_Event created:_" followed by the name
+of the event you just added, as shown in the diagram below.
 
 Additionally, the feature box (orange box) will display the list of all your events. The event you just
 added should be included in the list. In the example below, `freestyle 50m` appears at the bottom of the list.
@@ -405,7 +406,7 @@ Records stored under this event will be deleted as well.
 *What you should do*
 
 Let's say that your team is no longer participating in the `backstroke 100m` event, and you want to remove it
-from *Athletick*.
+from Athletick.
 
 Type in the command in the following format and press `Enter` to execute it.
 
@@ -413,47 +414,51 @@ Format : `delete -e NAME_OF_EVENT`
 
 Example: `delete -e backstroke 100m`
 
-image::deleteevent_wysd.png[width="250"]
+image::deleteevent_wysd.png[width="450"]
 
 *What you should see*
 
-If successfully deleted, the result box (red box) will display the deleted event's name as shown in the
-diagram below.
+If successfully deleted, the result box (red box) will display message "_Deleted event:_" followed by the name
+of the event you just deleted, as shown in the diagram below.
 
 Additionally, the feature box (orange box) will show the current list of events you have in Athletick. The
-deleted event should not appear there.
+deleted event should not appear in the list.
 
-.Notice that the backstroke 100m event is no longer listed.
-image::deleteevent_wyss.png[width="150"]
+.Notice that the backstroke 100m event is not listed.
+image::deleteevent_wyss.png[width="450"]
 
 ==== Adding an athlete's record : `performance`
 
-This command records your athlete’s performance for a certain event, on a certain day, to *Athletick*.
+This command records your athlete’s performance for a certain event, on a certain day, to Athletick.
 
 You will need the event name, athlete’s index, date of performance and timing of performance.
 
 NOTE: The event has to be created first. Otherwise, Athletick will prompt you to create that event.
 
-Let's say you took a timed trial for Irfan on 22nd October 2019 under the freestyle 50m event,
-and he took 23.47 seconds to complete it. Now you want to store this record in *Athletick*.
+Let's say you took a timed trial for Tao Li on 2nd November 2019 under the freestyle 50m event,
+and she took 24.01 seconds to complete it. Now you want to store this record in Athletick.
 
 *What you should do*
 
-As seen in the yellow box in the diagram below, Irfan is located at index 5 in the active list.
-
-Type in the command below, like so in the red box in the same diagram, and press `Enter`.
+Type in the command in the following format and press `Enter` to execute it.
 
 Format : `performance INDEX e/EVENT_NAME d/DDMMYYYY t/TIMING`
 
-Example : `performance 5 e/freestyle 50m d/02102019 t/23.47`
+Example : `performance 3 e/freestyle 50m d/02112019 t/24.01`
 
-image::addperformance_wysd.png[width=450]
+As seen in the orange box in the diagram below, Tao Li has index `3` in the active list. Hence, `3` is used
+the the `INDEX`.
+
+image::addrecord_wysd.png[width=450]
 
 *What you should see*
 
-If successfully added, the performance details will be displayed in the result box (red mark-up).
+If successfully added, the result box will display the details of the record you just added.
 
-image::addperformance_wyss.png[width=350]
+In the diagram below, the details of Tao Li's record - event, date and timing - are displayed in the
+success message.
+
+image::addrecord_wyss.png[width=450]
 
 ==== Viewings events : `view performance`
 
