--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -170,6 +170,23 @@ image::StatsSequenceDiagram.png[]
 
 // end::quizdiagram[]
 
+// tag::quiztagfeature[]
+=== Quiz Tag feature
+Alternatively, users can choose to quiz a series of tags instead of a single card.
+A list of flashcards will then be added to the list of quizable cards,
+which also triggers quiz mode, allowing users to use the flip command to answer flashcards consecutively.
+The following sequence diagram shows how the quiztag command works:
+
+.Component interactions for any quiztag command
+image::QuizTagSequenceDiagram.png[]
+
+After which, the flip command can be called consecutively for as long as there are flashcards left in the quiz, as shown below:
+
+.Flip command running and interact with the parser to toggle quiz mode
+image::FlipSequenceDiagram.png[]
+
+// end::quiztagfeature[]
+
 // tag::undoredo[]
 
 ===  Undo/Redo feature
